--- a/src/components/flex.css
+++ b/src/components/flex.css
@@ -6,8 +6,13 @@
 }
 
 .box {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
     height: 100px;
     width: 100px;
+    padding-left: 5px;
+    padding-right: 5px;
 }
 
 .greenBox {
